<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ojasvi.surasvi.AboutFragment">
    <ImageView
        android:contentDescription="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_large"
        android:src="@mipmap/logo"
        android:layout_marginTop="@dimen/dim_15dp"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:layout_marginTop="@dimen/dim_15dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share"
        android:layout_marginTop="@dimen/dim_15dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/favourites"
        android:layout_marginTop="@dimen/dim_15dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_downloads"
        android:layout_marginTop="@dimen/dim_15dp"/>
</LinearLayout>
